changes from my pc

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Nasa info - by Kypanz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,7 +42,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer>
-    <h6 style="text-align: center;">  Photo by Cliford Mervil from Pexels </h6>
+  <footer style="color: white;">
+    <h3 style="text-align: center;"> Basic webpage created by kypanz : <a href="https://github.com/kypanz" target="_blank" style="color: turquoise;"> https://github.com/kypanz </a> using the NASA api </h3>
   </footer>
 </html>
